--- a/index.html
+++ b/index.html
@@ -2,11 +2,313 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Девайс</title>
   </head>
+
   <body>
+    <header class="main-header">
+      <a class="header-logo" href="#">
+        <img class="header-logo-img" src="" alt="Логотип сайта Девайс">
+      </a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+      <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+        <label class="visually-hidden" for="search-form-request">Поиск по сайту</label>
+        <input id="search-form-request" type="search" name="search-form-request" placeholder="Текст поиска">
+        <button class="button-search" type="submit">Найти</button>
+      </form>
 
+      <a class="button-catalog" href="catalog.html">Каталог товаров</a>
+
+      <ul class="header-catalog-list visually-hidden">
+        <li class="header-catalog-item">
+          <a href="#">Виртуальная реальность</a>
+        </li>
+        <li class="header-catalog-item">
+          <a href="#">Моноподы для cелфи</a>
+        </li>
+        <li class="header-catalog-item">
+          <a href="#">Экшн-камеры</a>
+        </li>
+        <li class="header-catalog-item">
+          <a href="#">Фитнес-браслеты</a>
+        </li>
+         <li class="header-catalog-item">
+          <a href="#">Умные часы</a>
+        </li>
+        <li class="header-catalog-item">
+          <a href="#">Квадрокоптеры</a>
+        </li>
+      </ul>
+
+      <nav class="main-navigation">
+        <ul class="user-navigation">
+          <li class="user-navigation-item">
+            <a href="#">Войти</a>
+          </li>
+          <li class="user-navigation-item visually-hidden">
+            <a href="#">Выйти</a>
+          </li>
+          <li class="user-navigation-item">
+            <a href="#">Сравнить</a>
+          </li>
+          <li class="user-navigation-item">
+            <a href="#">Корзина</a>
+          </li>
+        </ul>
+
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a href="#">Доставка</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Гарантия</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>
+
+      <section class="slider">
+        <h2 class="visually-hidden">Слайдер с промо-товарами</h2>
+
+        <ul class="slide-list">
+          <li class="slide-item">
+            <img class="slide-img" src="" alt="Квадрокоптер">
+            <p class="slide-slogan">Порхает как бабочка, жалит как пчела!</p>
+            <p class="slide-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a class="button slide-button" href="#">Подробнее</a>
+            <dl class="slide-description">
+              <dt class="slide-description-property">Дальность полета</dt>
+              <dd class="slide-description-value">800 м</dd>
+              <dt class="slide-description-property">Радиус поражения</dt>
+              <dd class="slide-description-value">50 м</dd>
+            </dl>
+          </li>
+
+          <li class="slide-item visually-hidden">
+            <img class="slide-img" src="" alt="Фитнес-браслет">
+            <p class="slide-slogan">Худеем правильно!</p>
+            <p class="slide-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a class="button slide-button" href="#">Подробнее</a>
+            <dl class="slide-description">
+              <dt class="slide-description-property">Без подзарядки</dt>
+              <dd class="slide-description-value">48 часов</dd>
+            </dl>
+          </li>
+
+          <li class="slide-item visually-hidden">
+            <img class="slide-img" src="" alt="Монопод для селфи">
+            <p class="slide-slogan">Делай селфи, как Бен Стиллер!</p>
+            <p class="slide-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+            <a class="button slide-button" href="#">Подробнее</a>
+            <dl class="slide-description">
+              <dt class="slide-description-property">Длина палки</dt>
+              <dd class="slide-description-value">8,5 м</dd>
+              <dt class="slide-description-property">Вес палки</dt>
+              <dd class="slide-description-value">5 кг</dd>
+              <dt class="slide-description-property">Материал</dt>
+              <dd class="slide-description-value">Карбон</dd>
+            </dl>
+          </li>
+        </ul>
+
+        <button class="slider-button slider-prev" type="button">
+          <span class="visually-hidden">Предыдущий слайд</span>
+        </button>
+        <button class="slider-button slider-next" type="button">
+          <span class="visually-hidden">Следующий слайд</span>
+        </button>
+
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">1й слайд</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">2й слайд</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">3й слайд</span>
+            </button>
+          </li>
+        </ol>
+      </section>
+
+      <section class="catalog">
+        <h2 class="visually-hidden">Каталог</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <a class="catalog-item-link" href="#">
+              <img class="catalog-img" src="" alt="Очки виртуальной реальности">
+              <h3 class="catalog-title">Виртуальная реальность</h3>
+            </a>
+          </li>
+          <li class="catalog-item">
+            <a class="catalog-item-link" href="#">
+              <img class="catalog-img" src="" alt="Монопод">
+              <h3 class="catalog-title">Моноподы для селфи</h3>
+          </a>
+          </li>
+          <li class="catalog-item">
+            <a class="catalog-item-link" href="#">
+              <img class="catalog-img" src="" alt="Экшн-камера">
+              <h3 class="catalog-title">Экшн-камеры</h3>
+            </a>
+          </li>
+          <li class="catalog-item">
+            <a class="catalog-item-link" href="#">
+              <img class="catalog-img" src="" alt="Фитнес-браслет">
+              <h3 class="catalog-title">Фитнес-браслеты</h3>
+            </a>
+          </li>
+          <li class="catalog-item">
+            <a class="catalog-item-link" href="#">
+              <img class="catalog-img" src="" alt="Умные часы">
+              <h3 class="catalog-title">Умные часы</h3>
+            </a>
+          </li>
+          <li class="catalog-item">
+            <a class="catalog-item-link" href="#">
+              <img class="catalog-img" src="" alt="Квадрокоптер">
+              <h3 class="catalog-title">Квадрокоптеры</h3>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+
+        <ul class="advantages-list">
+          <li class="advantages-item advantages-item-current">
+            <a class="advantages-link" href="#">Доставка</a>
+          </li>
+          <li class="advantages-item">
+            <a class="advantages-link" href="#">Гарантия</a>
+          </li>
+          <li class="advantages-item">
+            <a class="advantages-link" href="#">Кредит</a>
+          </li>
+        </ul>
+
+        <section class="advantage">
+          <h3 class="advantage-title">Доставка</h3>
+          <p class="advantage-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </section>
+
+        <section class="advantage visually-hidden">
+          <h3 class="advantage-title">Гарантия</h3>
+          <p class="advantage-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+        </section>
+
+        <section class="advantage visually-hidden">
+          <h3 class="advantage-title">Кредит</h3>
+          <p class="advantage-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+        </section>
+      </section>
+
+      <section class="delivery">
+        <h2 class="visually-hidden">Доставка</h2>
+        <a class="delivery-link" href="#">Доставим редкий товар под заказ</a>
+        <span class="delivery-info" area-label="Информация о доставке">i</span>
+      </section>
+
+      <section class="about">
+        <h2 class="about-title">О нас</h2>
+        <p class="about-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p class="about-text about-delivery">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+        <ul class="about-delivery-list">
+          <li class="about-delivery-item">Меловые линии</li>
+          <li class="about-delivery-item">СДИК</li>
+          <li class="about-delivery-item">ТоксБерри</li>
+        </ul>
+        <a class="button button-about" href="#">Подробнее о нас</a>
+      </section>
+
+      <section class="contacts">
+        <h2 class="contacts-title">Контакты</h2>
+        <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
+        <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
+        <address class="contacts-address">
+          <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a class="contacts-address-tel" href="tel:88128121212">+7 (812) 812-12-12</a>
+        </address>
+        <h3 class="contacts-subtitle">Время работы</h3>
+        <ul class="contacts-schedule">
+          <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+          <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+        </ul>
+        <a class="button button-contact"href="#">Напишите нам</a>
+      </section>
+
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-text">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="subscribe-form-email">Подписка на дайджест</label>
+          <input id="subscribe-form-email" type="email" name="subscribe-form-email" placeholder="Ваш e-mail">
+          <button class="button-subscribe" type="submit">Подписаться</button>
+        </form>
+        <p class="subscribe-text">Это бесплатно</p>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <a class="footer-logo" href="#">
+        <img class="footer-logo-img" src="" alt="Логотип сайта Девайс">
+      </a>
+
+      <address class="footer-address">
+        <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+      </address>
+
+      <ul class="footer-navigation-list">
+        <li class="footer-navigation-item">
+          <a href="#">Доставка</a>
+        </li>
+        <li class="footer-navigation-item">
+          <a href="#">Гарантия</a>
+        </li>
+        <li class="footer-navigation-item">
+          <a href="#">Контакты</a>
+        </li>
+      </ul>
+
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="button-social" href="https://www.facebook.com/htmlacademy/">
+            <span class="visually-hidden">Facebook</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button-social" href="https://www.instagram.com/htmlacademy/">
+            <span class="visually-hidden">Instagram</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button-social" href="https://twitter.com/htmlacademy_ru/">
+            <span class="visually-hidden">Twitter</span>
+          </a>
+        </li>
+      </ul>
+
+      <address class="footer-address">
+        <a class="footer-address-tel" href="tel:88128121212">+7 (812) 812-12-12</a>
+      </address>
+
+      <a class="logo-partner" href="https://htmlacademy.ru/">
+        <img class="logo-partner-img" src="" alt="Логотип сайта HTML Academy">
+      </a>
+    </footer>
   </body>
 </html>
