Добавляет графику index

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="style/style.css">
   </head>
 
   <body>
     <header class="main-header">
 
       <a class="header-logo header-wrappen">
-        <img class="header-logo-img" src="#" alt="Логотип сайта интернет-магазин Девайс.">
+        <img class="header-logo-img" src="images/device-main-logo.svg" width="145px" height="36px" alt="Логотип сайта интернет-магазин Девайс.">
       </a>
 
       <div class="header-wrappen">
@@ -83,7 +84,7 @@
 
         <ul class="slide-list">
           <li class="slide-item">
-            <img class="slide-img" src="#" alt="Квадрокоптер.">
+            <img class="slide-img" src="images/product/quadrocopter.png" width="560px" height="560px" alt="Квадрокоптер.">
             <p class="slide-slogan">Порхает как бабочка, жалит как пчела!</p>
             <p class="slide-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a class="button slide-button" href="#">Подробнее</a>
@@ -96,7 +97,7 @@
           </li>
 
           <li class="slide-item visually-hidden">
-            <img class="slide-img" src="#" alt="Фитнес-браслет.">
+            <img class="slide-img" src="images/product/fitness-bracelet.png" width="560px" height="560px" alt="Фитнес-браслет.">
             <p class="slide-slogan">Худеем правильно!</p>
             <p class="slide-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a class="button slide-button" href="#">Подробнее</a>
@@ -107,7 +108,7 @@
           </li>
 
           <li class="slide-item visually-hidden">
-            <img class="slide-img" src="#" alt="Монопод для селфи.">
+            <img class="slide-img" src="images/product/selfie-stick.png" width="560px" height="560px" alt="Монопод для селфи.">
             <p class="slide-slogan">Делай селфи, как Бен Стиллер!</p>
             <p class="slide-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a class="button slide-button-more" href="#">Подробнее</a>
@@ -261,7 +262,7 @@
 
     <footer class="main-footer">
       <a class="footer-logo">
-        <img class="footer-logo-img" src="#" alt="Логотип сайта Девайс.">
+        <img class="footer-logo-img" src="images/device-footer-logo.svg" width="145px" height="36px" alt="Логотип сайта Девайс.">
       </a>
 
       <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -299,7 +300,7 @@
       <a class="footer-address-tel" href="tel:88128121212">+7 (812) 812-12-12</a>
 
       <a class="logo-partner" href="https://htmlacademy.ru/">
-        <img class="logo-partner-img" src="#" alt="Логотип сайта HTML Academy.">
+        <img class="logo-partner-img" src="images/html-academy-logo.svg" width="115px" height="33px" alt="Логотип сайта HTML Academy.">
       </a>
 
     </footer>
