--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header class="main-header">
 
       <a class="header-logo header-wrappen">
-        <img class="header-logo-img" src="images/device-main-logo.svg" width="145px" height="36px" alt="Логотип сайта интернет-магазин Девайс.">
+        <img class="header-logo-img image-style" src="images/device-main-logo.svg" width="145" height="36" alt="Логотип сайта интернет-магазин Девайс.">
       </a>
 
       <div class="header-wrappen">
         <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
           <input class="search-form-input" type="search" name="search-form-request" placeholder="Текст поиска">
-          <button class="button search-form-button" type="submit">Найти</button>
+          <button class="search-form-button" type="submit">Найти</button>
         </form>
 
         <ul class="user-navigation">
@@ -25,7 +25,7 @@
             <a class="user-navigation-link" href="#">Войти</a>
           </li>
           <li class="user-navigation-item visually-hidden">
-            <a href="#">Выйти</a>
+            <a class="user-navigation-link" href="#">Выйти</a>
           </li>
           <li class="user-navigation-item">
             <a class="user-navigation-link" href="#">Сравнить</a>
@@ -38,8 +38,10 @@
 
       <div class="header-wrappen">
         <div class="header-wrappen-catalog">
-          <a class="button button-catalog-link" href="catalog.html">Каталог товаров</a>
-          <button class="button button-catalog" type="button">+</button>
+          <a class="button button-catalog-link" href="catalog.html">
+            Каталог товаров
+            <span class="button-catalog">+</span>
+          </a>
           <ul class="header-catalog visually-hidden">
             <li class="header-catalog-item">
               <a class="header-catalog-link" href="#">Виртуальная реальность</a>
@@ -64,19 +66,19 @@
 
         <ul class="site-navigation">
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="#">Доставка</a>
+            <a class="button site-navigation-link" href="#">Доставка</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="#">Гарантия</a>
+            <a class="button site-navigation-link" href="#">Гарантия</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="#">Контакты</a>
+            <a class="button site-navigation-link" href="#">Контакты</a>
           </li>
         </ul>
       </div>
     </header>
 
-    <main class="main-index">
+    <main class="main-index main-container">
       <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>
 
       <section class="slider">
@@ -84,8 +86,8 @@
 
         <ul class="slide-list">
           <li class="slide-item">
-            <img class="slide-img" src="images/product/quadrocopter.png" width="560px" height="560px" alt="Квадрокоптер.">
-            <p class="slide-slogan">Порхает как бабочка, жалит как пчела!</p>
+            <img class="slide-img image-style" src="images/product/quadrocopter.png" width="560" height="560" alt="Квадрокоптер.">
+            <p class="slide-slogan raleway-title">Порхает как бабочка, жалит как пчела!</p>
             <p class="slide-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a class="button slide-button" href="#">Подробнее</a>
             <dl class="slide-description">
@@ -97,7 +99,7 @@
           </li>
 
           <li class="slide-item visually-hidden">
-            <img class="slide-img" src="images/product/fitness-bracelet.png" width="560px" height="560px" alt="Фитнес-браслет.">
+            <img class="slide-img image-style" src="images/product/fitness-bracelet.png" width="560" height="560" alt="Фитнес-браслет.">
             <p class="slide-slogan">Худеем правильно!</p>
             <p class="slide-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a class="button slide-button" href="#">Подробнее</a>
@@ -108,7 +110,7 @@
           </li>
 
           <li class="slide-item visually-hidden">
-            <img class="slide-img" src="images/product/selfie-stick.png" width="560px" height="560px" alt="Монопод для селфи.">
+            <img class="slide-img image-style" src="images/product/selfie-stick.png" width="560" height="560" alt="Монопод для селфи.">
             <p class="slide-slogan">Делай селфи, как Бен Стиллер!</p>
             <p class="slide-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a class="button slide-button-more" href="#">Подробнее</a>
@@ -123,12 +125,18 @@
           </li>
         </ul>
 
-        <button class="slider-button slider-prev" type="button">
-          <span class="visually-hidden">Предыдущий слайд</span>
-        </button>
-        <button class="slider-button slider-next" type="button">
-          <span class="visually-hidden">Следующий слайд</span>
-        </button>
+        <ul class="slider-control">
+          <li class="slider-control-item">
+            <button class="slider-control-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущий слайд</span>
+            </button>
+          </li>
+          <li class="slider-control-item">
+            <button class="slider-control-button slider-next" type="button">
+              <span class="visually-hidden">Следующий слайд</span>
+            </button>
+          </li>
+        </ul>
 
         <ul class="slider-pagination">
           <li class="slider-pagination-item">
@@ -190,39 +198,39 @@
 
         <ul class="advantages-pagination">
           <li class="advantages-pagination-item advantages-pagination-current">
-            <button class="advantages-button" type="button">Доставка</button>
+            <button class="button advantages-button" type="button">Доставка</button>
           </li>
           <li class="advantages-pagination-item">
-            <button class="advantages-button" type="button">Гарантия</button>
+            <button class="button advantages-button" type="button">Гарантия</button>
           </li>
           <li class="advantages-pagination-item">
-            <button class="advantages-button" type="button">Кредит</button>
+            <button class="button advantages-button" type="button">Кредит</button>
           </li>
         </ul>
 
         <ul class="advantages-list">
           <li class="advantage-item">
-            <h3 class="advantage-title">Доставка</h3>
+            <h3 class="advantage-title raleway-title">Доставка</h3>
             <p class="advantage-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </li>
           <li class="advantage-item visually-hidden">
-            <h3 class="advantage-title">Гарантия</h3>
+            <h3 class="advantage-title raleway-title">Гарантия</h3>
             <p class="advantage-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
           </li>
           <li class="advantage-item visually-hidden">
-            <h3 class="advantage-title">Кредит</h3>
+            <h3 class="advantage-title raleway-title">Кредит</h3>
             <p class="advantage-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
           </li>
         </ul>
       </section>
 
       <div class="delivery">
-        <a class="delivery-link" href="#">Доставим редкий товар под заказ</a>
+        <a class="button delivery-button" href="#">Доставим редкий товар под заказ</a>
         <span class="delivery-info" aria-label="Информация о доставке">i</span>
       </div>
 
       <section class="about">
-        <h2 class="about-title">О нас</h2>
+        <h2 class="about-title raleway-title">О нас</h2>
         <p class="about-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p class="about-text about-delivery">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
         <ul class="about-delivery-list">
@@ -234,7 +242,7 @@
       </section>
 
       <section class="contacts">
-        <h2 class="contacts-title">Контакты</h2>
+        <h2 class="contacts-title raleway-title">Контакты</h2>
         <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
         <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
         <address class="contacts-address">
@@ -250,11 +258,11 @@
       </section>
 
       <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <h2 class="subscribe-title raleway-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-text">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="subscribe-form-input" type="email" name="subscribe-form-email" placeholder="Ваш e-mail">
-          <button class="subscribe-form-button" type="submit">Подписаться</button>
+          <button class="button subscribe-form-button" type="submit">Подписаться</button>
         </form>
         <p class="subscribe-form-info">Это бесплатно</p>
       </section>
@@ -262,20 +270,20 @@
 
     <footer class="main-footer">
       <a class="footer-logo">
-        <img class="footer-logo-img" src="images/device-footer-logo.svg" width="145px" height="36px" alt="Логотип сайта Девайс.">
+        <img class="footer-logo-img image-style" src="images/device-footer-logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
       </a>
 
       <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
 
       <ul class="footer-navigation">
         <li class="footer-navigation-item">
-          <a href="#">Доставка</a>
+          <a class="button footer-navigation-link" href="#">Доставка</a>
         </li>
         <li class="footer-navigation-item">
-          <a href="#">Гарантия</a>
+          <a class="button footer-navigation-link" href="#">Гарантия</a>
         </li>
         <li class="footer-navigation-item">
-          <a href="#">Контакты</a>
+          <a class="button footer-navigation-link" href="#">Контакты</a>
         </li>
       </ul>
 
@@ -300,7 +308,7 @@
       <a class="footer-address-tel" href="tel:88128121212">+7 (812) 812-12-12</a>
 
       <a class="logo-partner" href="https://htmlacademy.ru/">
-        <img class="logo-partner-img" src="images/html-academy-logo.svg" width="115px" height="33px" alt="Логотип сайта HTML Academy.">
+        <img class="logo-partner-img image-style" src="images/html-academy-logo.svg" width="115" height="33" alt="Логотип сайта HTML Academy.">
       </a>
 
     </footer>
