Добавляет базовую стилизацию catalog

--- a/catalog.html
+++ b/catalog.html
@@ -99,9 +99,9 @@
 
     <main class="main-catalog main-container">
       <header class="header-catalog">
-        <h1 class="catalog-title">Моноподы для селфи</h1>
+        <h1 class="catalog-title raleway-title">Моноподы для селфи</h1>
 
-        <ul class="breadcrumbs">
+        <ul class="breadcrumbs reset-list">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="#">Главная</a>
           </li>
@@ -145,7 +145,7 @@
 
           <fieldset class="filter-form-group">
             <legend class="filter-form-title">Цвет</legend>
-            <ul class="filter-form-list">
+            <ul class="filter-form-list reset-list">
               <li class="filter-form-item">
                 <label class="filter-form-label">
                   <input class="filter-form-checkbox" type="checkbox" name="black" checked>
@@ -186,7 +186,7 @@
 
           <fieldset class="filter-form-group">
             <legend class="filter-form-title">Bluetooth</legend>
-            <ul class="filter-form-list">
+            <ul class="filter-form-list reset-list">
               <li class="filter-form-item">
                 <label class="filter-form-label">
                   <input class="filter-form-radio" type="radio" name="bluetooth" value="yes">
@@ -221,7 +221,7 @@
             </select>
           </div>
 
-          <ul class="sort-list">
+          <ul class="sort-list reset-list">
             <li class="sort-item">
               <button class="sort-button">
                 <span class="visually-hidden">По возрастанию</span>
@@ -237,31 +237,31 @@
 
         <section class="catalog">
           <h2 class="visually-hidden">Каталог отобранных товаров</h2>
-          <ul class="catalog-list">
+          <ul class="catalog-list reset-list">
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="#" width="360" height="380" alt="Селфи-палка любительского уровня.">
+                <img class="catalog-item-image" src="images/product/product-1.jpg" width="360" height="380" alt="Селфи-палка любительского уровня.">
                 <h3 class="catalog-item-title">Любительская селфи-палка</h3>
                 <p class="catalog-item-cost">500 ₽</p>
               </a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="#" width="360" height="380" alt="Селфи-палка профессионального уровня.">
+                <img class="catalog-item-image" src="images/product/product-2.jpg" width="360" height="380" alt="Селфи-палка профессионального уровня.">
                 <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
                 <p class="catalog-item-cost">1 500 ₽</p>
               </a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="#" width="360" height="380" alt="Селфи-палка для водных приключений.">
+                <img class="catalog-item-image" src="images/product/product-3.jpg" width="360" height="380" alt="Селфи-палка для водных приключений.">
                 <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
                 <p class="catalog-item-cost">2 500 ₽</p>
               </a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="#" width="360" height="380" alt="Селфи-палка с рукой для оригинальных фото.">
+                <img class="catalog-item-image" src="images/product/product-4.jpg" width="360" height="380" alt="Селфи-палка с рукой для оригинальных фото.">
                 <h3 class="catalog-item-title">Селфи-палка «Следуй за мной»</h3>
                 <p class="catalog-item-cost">1 500 ₽</p>
               </a>
@@ -276,9 +276,9 @@
             <button class="control-button" type="button">Загрузить ещё</button>
           </div>
 
-          <ul class="page-control-pagination">
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">Назад</a>
+          <ul class="page-control-pagination reset-list">
+            <li class="pagination-item pagination-item-back">
+              <a class="pagination-link pagination-link-back" href="#">Назад</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">1</a>
@@ -295,8 +295,8 @@
             <li class="pagination-item">
               <a class="pagination-link" href="#">15</a>
             </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">Вперёд</a>
+            <li class="pagination-item pagination-item-forward">
+              <a class="pagination-link pagination-link-forward" href="#">Вперёд</a>
             </li>
           </ul>
         </section>
