Добавляет поповер для корзины

--- a/catalog.html
+++ b/catalog.html
@@ -39,6 +39,40 @@
             </li>
             <li class="catalog-menu-card">
               <a class="user-navigation-link" href="#">Корзина</a>
+
+              <div class="popover-cart popover-close">
+                <div class="popover-content">
+                  <ul class="card-list reset-list">
+                    <li class="card-item">
+                      <a class="card-link" href="#">
+                        <img class="card-img image-style" src="images/product/product-small-1.jpg" width="39" height="43" alt="Селфи-палка любительского уровня.">
+                        <p class="card-title">Любительская<br> селфи-палка</p>
+                      </a>
+                      <button class="card-item-button button-style" type="button">
+                        <span class="visually-hidden">Удалить из корзины с товарами</span>
+                      </button>
+                    </li>
+                    <li class="card-item">
+                      <a class="card-link" href="#">
+                        <img class="card-img image-style" src="images/product/product-small-2.jpg" width="39" height="43" alt="Селфи-палка профессионального уровня.">
+                        <p class="card-title">Профессиональная селфи-палка</p>
+                      </a>
+                      <button class="card-item-button button-style" type="button">
+                        <span class="visually-hidden">Удалить из корзины с товарами</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="card-total">
+                    <p class="total-goods">Товаров:
+                      <span class="goods-quantity">2</span>
+                    </p>
+                    <p class="total-cost">Сумма:
+                      <span class="cost-quantity">2000 ₽</span>
+                    </p>
+                  </div>
+                  <button class="card-button button-style" type="button">Открыть корзину</button>
+                </div>
+              </div>
             </li>
           </ul>
         </li>
@@ -407,7 +441,7 @@
                 <span class="modal-tooltip">
                   <button class="modal-tooltip-button button-style" type="button" aria-labelledby="modal-tooltip-label">
                     <span class="visually-hidden">Показать дополнительную информацию</span>
-                    <svg class="delivery-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="delivery-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                       <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
                     </svg>
                   </button>
